Reverted fixes for min-height as they fucked up too much shit

--- a/core/app/assets/stylesheets/base/screen.css.less
+++ b/core/app/assets/stylesheets/base/screen.css.less
@@ -5,7 +5,7 @@
   .box-sizing(border-box);
 }
 
-html {
+html, body {
   height: 100%;
 }
 
@@ -13,17 +13,12 @@ body {
   position: relative;
   background: white;
   overflow-y: scroll;
-  min-height: 100%;
   min-width: @siteWidth;
   .background();
 }
 
 #container {
-  position: absolute;
-  left: 50%;
-  margin-left: -@siteWidth/2;
-  top: 0;
-  bottom: 0;
+  height: 100%;
 }
 
 #left-column {
